<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ivGenesisConsoleImage"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/sega_mega_drive_jp_mk1_console_set"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/tvIntroText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivGenesisConsoleImage"
            android:layout_margin="15dp"
            android:text="@string/app_intro"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tvDefaultFolderInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvIntroText"
            android:layout_margin="15dp"
            android:text="@string/default_folder_info"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnFileBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_browser_button"
            android:textSize="28sp"
            android:layout_below="@id/tvDefaultFolderInfo"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btnNowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_button"
            android:textSize="28sp"
            android:layout_below="@id/btnFileBrowser"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btnPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_button"
            android:textSize="28sp"
            android:layout_below="@id/btnNowPlaying"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>
